# Python-house

./: .gitignore  Assert.py  CallBack.py  FactoryMethod.py  Generator.py  GoodClass.py  Pickle.py  Pythonチートシート-主に機械学習.md  Pythonチートシート.md  README.md  assert.py  asynchronous.py  behavioral-pattern.py  crawl_decimal.py  dataclass.py  decorator.py  dict.py  draft.py  eval.py  facade-pattern.py  goodclass.py  higher-order-func.py  list-order-change.py  main.py  pickle_1.py  practise.py  pw-analyzer.py  pyproject.toml  pyscript.html  select-case.py  semaphore.py  sharedmemory.py  singleton.py  structural-pattern.py  withclass.py  スレッド.py  テクニック.md  テクニック.txt  ハンバーガー統計学.ipynb  近似曲線.ipynb
Utils/: filemeta.py  raceid.py  random_walk.py  request.py  venuecode.py
tests/: test_filemeta.py  test_raceid.py
