[tool.poetry]
name = "python-house"
version = "0.1.0"
description = ""
authors = ["Toshiya Takeshita <toshi@atbat.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
numpy = "^1.23.2"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
